--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-tools/design-layout-tools.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-tools/design-layout-tools.component.html
@@ -11,6 +11,9 @@
     <p-button (onClick)="onClickAddRectangle()" text>
         <img src="assets/icons/rectangle.png" alt="rectangle" pTooltip="Rectangle" width="20">
     </p-button>
+    <p-button (onClick)="onClickAddHTML()" text>
+        <img src="assets/icons/block.png" alt="block" pTooltip="HTML" width="20">
+    </p-button>
     <p-button (onClick)="onClickAddLine()" text>
         <img src="assets/icons/line.png" alt="line" pTooltip="Line" width="20">
     </p-button>
