add html design layout

--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
@@ -26,7 +26,7 @@
                 <div [id]="layer.id" class="absolute origin-top-left bg-aqua pointer-events-none flex items-center justify-center"
                     [style.top.px]="layer.top" [style.left.px]="layer.left"
                     [style.width.px]="layer.width" [style.height.px]="layer.height" [style.transform]="'rotate(' + layer.rotation + 'deg)'">
-                    {{ layer.content }}
+                    <img src="https://placehold.co/600x400" class="w-full h-full object-cover" alt="">
                 </div>
             }
         </div>
