--- a/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
@@ -16,7 +16,7 @@
         }
     </div>
 
-    <div class="outline-dashed outline-2 outline-offset-2 outline-gray-400 h-full w-30" *cdkDragPlaceholder></div>
+    <div class="outline-dashed outline-2 outline-offset-2 outline-gray-400 w-30" [ngClass]="customCSS" *cdkDragPlaceholder></div>
 
     <div *cdkDragPreview>
         <div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg p-3 bg-[var(--p-surface-300)] h-20 w-50">
