--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-1 h-full relative">
-    <p-menubar class="z-10" [model]="layoutItems">
+    <p-menubar class="z-20" [model]="layoutItems">
         <ng-template #item let-item let-root="root">
             <a pRipple class="flex items-center p-menubar-item-link">
                 <span>{{ item.label }}</span>
@@ -7,26 +7,29 @@
                 <i *ngIf="item.childIcon" class="ml-auto !text-sm" [ngClass]="'pi ' + item.childIcon"></i>
             </a>
         </ng-template>
-        <ng-template #end>
-            <p-button label="Contents" outlined />
-        </ng-template>
     </p-menubar>
 
-    <div class="relative flex flex-col flex-1 items-center justify-center overflow-hidden" cdkDropListGroup>
+
+    <div class="relative flex flex-col flex-1 items-center justify-center overflow-hidden h-full" cdkDropListGroup>
+
         @if (designLayoutService.getCanvas()) {
-            <div class="absolute top-0 left-0 py-2 px-1 bg-[var(--p-surface-100)] shadow-lg rounded-lg z-5">
+            <div class="absolute top-0 left-0 py-2 px-1 bg-[var(--p-surface-100)] shadow-lg rounded-lg z-10">
                 <app-design-layout-tools [canvasElement]="canvasElement.nativeElement" />
             </div>
         }
 
-        <div class="relative" cdkDrag [cdkDragDisabled]="!canvasProps.drag">
-            <canvas class="rounded-lg" #canvas></canvas>
+        <div class="relative" cdkDrag [cdkDragDisabled]="!canvasProps.drag" cdkDropList (cdkDropListDropped)="onDropped($event)">
+            <canvas #canvas></canvas>
 
             @for (layer of canvasHTMLLayers(); track $index) {
                 <div [id]="layer.id" class="absolute origin-top-left bg-aqua pointer-events-none flex items-center justify-center"
                     [style.top.px]="layer.top" [style.left.px]="layer.left"
                     [style.width.px]="layer.width" [style.height.px]="layer.height" [style.transform]="'rotate(' + layer.rotation + 'deg)'">
-                    <img src="https://placehold.co/600x400" class="w-full h-full object-cover" alt="">
+                    
+                    <div class="flex h-full w-full">
+                        <app-playlist-preview class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg"
+                            [currentContent]="playlistService.currentContent()" [showControls]="false" />
+                    </div>
                 </div>
             }
         </div>
@@ -36,16 +39,46 @@
                 <p class="text-2xl italic text-gray-400">Create a new design (Alt + Ctrl + N)</p>
             </div>
         }
-    </div>
 
-    @if (canvasProps.zoom) {
-        <div class="flex items-center abolute bottom-0 left-0 gap-1">
-            <p-button icon="pi pi-search-plus" (onClick)="onClickZoom(1.1)" />
-            <p-button icon="pi pi-search-minus" (onClick)="onClickZoom(0.9)" severity="secondary" />
-            <p class="text-sm italic text-red-500 ml-3">(Ctrl + Scroll to Zoom)</p>
-        </div>
-    }
+        @if (showContents()) {
+            <div class="absolute top-0 right-0 h-full z-30">
+                <p-card styleClass="h-full">
+                    <ng-template #title>
+                        <div class="flex gap-2">
+                            <p class="text-xl font-semibold">Choose Content</p>
+                            <p-button (onClick)="showContents.set(false)" class="ml-auto" icon="pi pi-times" size="small" text />
+                        </div>
+                    </ng-template>
+                    <app-design-layout-contents />
+                </p-card>
+            </div>
+        }
+        
+        @if (canvasProps.zoom) {
+            <div class="flex items-center gap-2 absolute top-0 right-0 z-30 bg-[var(--p-surface-50)] shadow-lg rounded-lg p-2" cdkDrag>
+                <p class="text-sm italic text-red-500 ml-3">(Ctrl + Scroll to Zoom)</p>
+                <p-button icon="pi pi-search-plus" (onClick)="onClickZoom(1.1)" size="small" />
+                <p-button icon="pi pi-search-minus" (onClick)="onClickZoom(0.9)" severity="secondary" size="small" />
+            </div>
+        }
+        
+        @if (canvasProps.selection) {
+            <div class="flex items-center gap-1 absolute top-0 right-0 z-30 bg-[var(--p-surface-50)] shadow-lg rounded-lg p-2" cdkDrag>
+                <div class="w-2 h-8 bg-[var(--p-surface-200)] rounded-lg cursor-move" cdkDragHandle></div>
+                @for (item of objectAlignments; track $index) {
+                    <p-button (onClick)="item.command()" text>
+                        <img [src]="item.image" [alt]="item.label" [pTooltip]="item.label" tooltipPosition="bottom" width="15">
+                    </p-button>
+                }
+            </div>
+        }
+        
+        @if (canvasProps.text) { <app-text-properties /> }
+        @if (canvasProps.rect) { <app-rect-properties /> }
+        @if (canvasProps.line) { <app-rect-properties [lineProps]="true" /> }
+    </div>
 </div>
+
 
 <p-dialog header="Create New" [(visible)]="showCanvasSize" [style]="{ width: '60rem' }" [resizable]="false" draggable modal>
     <div class="grid grid-cols-1 md:grid-cols-12 gap-3 mt-2">
@@ -86,7 +119,6 @@
         <p-button label="Create" severity="success" (onClick)="onClickCreateCanvas()" [disabled]="designForm.invalid" />
     </ng-template>
 </p-dialog>
-
 
 <p-toast />
 <p-confirmdialog />
