--- a/vcastplay-cms/src/app/components/filters/filters.component.html
+++ b/vcastplay-cms/src/app/components/filters/filters.component.html
@@ -1,13 +1,13 @@
 <form [formGroup]="filters" class="flex flex-row gap-4 justify-between">
     <p-input-group>
-        <input pInputText placeholder="Search" formControlName="keywords" />
+        <input pInputText placeholder="Search" formControlName="keywords" (keydown.enter)="onClickApply()" fluid />
         <p-inputgroup-addon>
-            <p-button (onClick)="keywords?.reset()" [icon]="'pi ' + (keywords?.dirty ? 'pi-times' : 'pi-search')"></p-button>
+            <p-button (onClick)="onClickClear()" [icon]="'pi ' + (keywords?.dirty ? 'pi-times' : 'pi-search')"></p-button>
         </p-inputgroup-addon>
     </p-input-group>
-    <div>
+    @if (showOthers) {
         <p-button icon="pi pi-filter" pTooltip="More Filter" tooltipPosition="bottom" [text]="true" (onClick)="filter.toggle($event)"></p-button>
-        <p-popover #filter>
+        <p-popover #filter appendTo="body">
             <div class="flex flex-col gap-5 w[25rem]">
                 <p-select [options]="status" formControlName="status" optionLabel="label" optionValue="value" placeholder="Status" showClear />
                 <p-select [options]="sortBy" formControlName="sortBy" optionLabel="label" optionValue="value" placeholder="Sort By" class="w-50" showClear />
@@ -25,5 +25,5 @@
                 </div>
             </div>
         </p-popover>
-    </div>
+    }
 </form>
