--- a/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
@@ -1,5 +1,5 @@
 <div class="relative w-[140px] h-full bg-[var(--p-surface-300)] flex items-center justify-center group cursor-grab"
-    [ngClass]="{ 'shadow-lg shadow-red-600/70': currentPlaying() }">
+    [ngClass]="{ 'shadow-lg shadow-red-600/70': onCurrentPlaying() }">
 
     <div class="absolute top-0 right-0 h-full w-full z-10 bg-gradient-to-t from-[var(--p-primary-500)] to-transparent ">
         <div class="flex items-center justify-center h-full gap-2 hidden bg-gray-300/60" [ngClass]="{ 'group-hover:flex': !isPlaying()}">
