--- a/vcastplay-cms/src/app/pages/schedules/schedule-details/schedule-details.component.html
+++ b/vcastplay-cms/src/app/pages/schedules/schedule-details/schedule-details.component.html
@@ -95,8 +95,8 @@
         }
         @case ('playlist') {
             <div class="flex h-full md:h-100">
-                <app-playlist-preview class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg"
-                    [currentContent]="playlistService.currentContent()" />
+                <app-preview-playlist class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg" 
+                    [playlist]="playlistForm.value" />
             </div>
         }
     }
