--- a/vcastplay-cms/src/app/components/preview-playlist/preview-playlist.component.html
+++ b/vcastplay-cms/src/app/components/preview-playlist/preview-playlist.component.html
@@ -1,8 +1,15 @@
 <div class="flex h-80 md:h-full w-full justify-center items-center">
     <div class="relative transition-all duration-{{content().currentTransition()?.speed}} ease-in-out" [ngClass]="getTransitionClasses()">
-        <ng-container *ngIf="content().currentContent()">
-            <app-preview-content class="absolute h-full w-full flex items-center justify-center"
-                [currentContent]="content().currentContent()" (timeUpdate)="onProgressUpdate(content().index, $event)" [autoPlay]="true" />
+        <ng-container *ngIf="content().currentContent() as content">
+            @switch (content.type) {
+                @case ('design') {
+                    <app-preview-design-layout />
+                }
+                @default {
+                    <app-preview-content class="absolute h-full w-full flex items-center justify-center"
+                        [currentContent]="content" (timeUpdate)="onProgressUpdate(content().index, $event)" [autoPlay]="true" />
+                }
+            }
         </ng-container>
     </div>
 </div>
